# wetwin

./: AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASING.md  RELEASING.zh-CN.md
.github/workflows/: release.yml
packaging/homebrew-tap/Formula/: wetwin.rb
scripts/: build-macos-pkg.sh  release-and-upgrade-local.sh  update-homebrew-formula.sh
src/: app.rs  cli.rs  config.rs  doctor.rs  error.rs  icon.rs  lang.rs  main.rs  plist.rs  prefs.rs  sign.rs  tui.rs
