[package]
name = "wetwin"
version = "0.1.2"
edition = "2021"
description = "A lightweight macOS WeChat multi-instance manager written in Rust."
license = "MIT"
repository = "https://github.com/life2you/wetwin"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
crossterm = "0.28"
ratatui = "0.29"
